# SearchForEach

./: Build.txt  CMakeLists.txt  README.md  answers.json  requests.json
include/: ConverterJson.h  InvertedIndex.h  SearchServer.h
src/: CMakeLists.txt  ConverterJson.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
test/: 1.txt  5.txt  6.txt  7.txt  8.txt
test/testbig/: 1.txt  2.txt  3.txt  4.txt
test2/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  3.txt  7.txt
tests/: CMakeLists.txt  ConverterJSON_test.cpp  InvertedIndex_test.cpp  SearchEngine_test.cpp  answers.json  config.json  requests.json
tests/test/: 1.txt  2.txt  3.txt  4.txt
